@@ -1,0 +1,1 @@
+1	10000060	.	C	<*>	0	.	DP=1;I16=0,1,0,0,40,1600,0,0,29,841,0,0,25,625,0,0;QS=1,0;MQ0F=0	PL	0,3,29
